[package]
name = "cartesian_maze_puzzle"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Sims andrew,simsd.@gmail.com"]
description = "A cartesian maze puzzle for you to solve."
license = "MIT"
repository = "https://github.com/Andrewsimsd/rust-cartesian-maze-puzzle"
homepage = "https://github.com/Andrewsimsd/rust-cartesian-maze-puzzle"
readme = "README.md"
keywords = ["puzzle", "cartesian"]
categories = ["maze","puzzle", "cartesian"]

[dependencies]
rand = "0.9"